fixed some css spacing

--- a/picard/src/app/algorithm/algor.css
+++ b/picard/src/app/algorithm/algor.css
@@ -1,33 +1,40 @@
-/* styles.css */
+
 
 /* Main Container */
 .main-container {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
-    align-items: center;
     justify-content: space-between;
-    padding: 24px;
+    
   }
   
   /* Logo Button */
   .logo-button {
     background: dark-grey;
+    justify-content: left;
+    padding: 10px;
+    list-style: none;
+
   }
   
 
-  .log-out-button {
-    background: dark-grey;
+  .spacing {
+    padding: 20px;
   }
 /* css for button outlines */
-.my-element {
+.algo {
   display: flex;
-  justify-content: space-between;
-  border: .25px solid #3f3f46 ; /* Added border property */
+  justify-content: center;
+  width: 1400px;
+  border: .25px solid #3f3f46 ; 
   border-radius: 13px;
   padding: 17px; 
   background-image: linear-gradient(to bottom, #0c0a09, #18181b);
   backdrop-filter: blur(20px);
+  
+  
+
 }
 
 .my-element.dark {
@@ -45,7 +52,14 @@
   padding: 4px;
 }
 
-.my-element.lg.dark {
-  border-color: #333;
-  background-color: rgba(0, 0, 0, 0.3);
+.blur {
+    content: '';
+    position: absolute;
+    z-index: -20;
+    height: 180px;
+    width: 240px;
+    left: 33.33%; /* Translate horizontally by one-third of its own width */
+    background: conic-gradient(from 200deg at center, skyblue, blue);
+    filter: blur(2px);
+  
 }
