--- a/picard/src/app/styles.css
+++ b/picard/src/app/styles.css
@@ -20,6 +20,16 @@
     background: dark-grey;
   }
 /* css for button outlines */
+.input1 {
+  display: flex;
+  justify-content: space-between;
+  border: .25px solid #3f3f46 ; /* Added border property */
+  border-radius: 13px;
+  padding: 17px; 
+  background-image: linear-gradient(to bottom, #09090b, #09090b);
+  backdrop-filter: blur(20px);
+}
+
 .my-element {
   display: flex;
   justify-content: space-between;
@@ -28,24 +38,4 @@
   padding: 17px; 
   background-image: linear-gradient(to bottom, #0c0a09, #18181b);
   backdrop-filter: blur(20px);
-}
-
-.my-element.dark {
-  border-color: #333;
-  background-color: rgba(0, 0, 0, 0.3);
-  background-image: none; /* Override the gradient */
-}
-
-.my-element.lg {
-  position: static;
-  width: auto;
-  border: 1px solid #ccc;
-  border-radius: 20px;
-  background-color: #f2f2f2;
-  padding: 4px;
-}
-
-.my-element.lg.dark {
-  border-color: #333;
-  background-color: rgba(0, 0, 0, 0.3);
 }
